# twilight

./: .codecov.yml  .codespellrc  .editorconfig  .gitignore  .rustfmt.toml  .rusty-hook.toml  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE.md  README.md  cliff.toml  clippy.toml  gen-changelogs.sh  help.html  netlify.sh  netlify.toml  nextest.toml  release.sh  release.toml  search-index.js  settings.html
command-parser/: CHANGELOG.md  Cargo.toml  README.md
command-parser/benches/: commands.rs  prefix.rs
command-parser/src/: arguments.rs  casing.rs  config.rs  lib.rs  parser.rs
command-parser/src/builder/: command.rs  mod.rs
dawn/: Cargo.toml
dawn/src/: lib.rs
embed-builder/: CHANGELOG.md  Cargo.toml  README.md
embed-builder/src/: author.rs  builder.rs  field.rs  footer.rs  image_source.rs  lib.rs
examples/: Cargo.toml  gateway-cluster.rs  gateway-intents.rs  gateway-metrics.rs  gateway-parallel.rs  gateway-queue-http.rs  gateway-request-members.rs  gateway-reshard.rs  gateway-shard.rs  http-allowed-mentions.rs  http-get-message.rs  http-proxy.rs  lavalink-basic-bot.rs  model-webhook-slash.rs
examples/cache-optimization/: main.rs
examples/cache-optimization/models/: channel.rs  current_user.rs  emoji.rs  guild.rs  guild_integration.rs  guild_scheduled_events.rs  member.rs  message.rs  mod.rs  role.rs  (+6 more)
examples/gateway-cluster/: Cargo.toml
examples/gateway-intents/: Cargo.toml
examples/gateway-metrics/: Cargo.toml
examples/gateway-request-members/: Cargo.toml
examples/gateway-shard/: Cargo.toml
examples/http-allowed-mentions/: Cargo.toml
examples/http-get-message/: Cargo.toml
examples/http-proxy/: Cargo.toml
examples/lavalink-basic-bot/: Cargo.toml
examples/model-webhook-slash/: Cargo.toml
gateway/: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md
gateway-queue/: CHANGELOG.md  Cargo.toml  README.md
gateway-queue/src/: day_limiter.rs  large_bot_queue.rs  lib.rs
gateway/queue/: CHANGELOG.md  Cargo.toml
gateway/src/: channel.rs  command.rs  config.rs  connection.rs  error.rs  event.rs  future.rs  json.rs  latency.rs  lib.rs  listener.rs  message.rs  queue.rs  ratelimiter.rs  session.rs  shard.rs  stream.rs  tls.rs
gateway/tests/: test_shard_command_ratelimit.rs  test_shard_state_events.rs
http/: CHANGELOG.md  Cargo.toml  README.md
http-ratelimiting/: CHANGELOG.md  Cargo.toml  README.md
http-ratelimiting/src/: headers.rs  lib.rs  request.rs  ticket.rs
http/benches/: application_command_permissions.rs  headers.rs
http/ratelimiting/: Cargo.toml
http/src/: api_error.rs  error.rs  json.rs  lib.rs  pending.rs  routing.rs
http/tests/: test_runtimes.rs
lavalink/: CHANGELOG.md  Cargo.toml  README.md
lavalink/src/: client.rs  http.rs  lib.rs  model.rs  node.rs  player.rs
lmao/: Cargo.toml
lmao/src/: lib.rs
mention/: CHANGELOG.md  Cargo.toml  README.md
mention/benches/: fmt.rs
mention/src/: fmt.rs  lib.rs  timestamp.rs
model/: CHANGELOG.md  Cargo.toml  README.md
model/benches/: deserialization.rs  image_hash.rs  member_chunk.rs  test_benches.rs
model/src/: id.rs  lib.rs  snowflake.rs  test.rs  util.rs  visitor.rs
oauth2/: Cargo.toml  README.md
oauth2/src/: access_token_exchange.rs  authorization_url.rs  client.rs  client_credentials_grant.rs  grant_type.rs  lib.rs  prompt.rs  refresh_token_exchange.rs  scope.rs  token_type.rs
slash/: Cargo.toml
slash/src/: main.rs
standby/: CHANGELOG.md  Cargo.toml  README.md
standby/src/: event.rs  future.rs  futures.rs  lib.rs
twilight/: CHANGELOG.md  Cargo.toml  all.html  index.html
twilight-cache-inmemory/: CHANGELOG.md  Cargo.toml  README.md
twilight-cache-inmemory/src/: builder.rs  config.rs  iter.rs  lib.rs  permission.rs  stats.rs  test.rs  traits.rs
twilight-gateway/: CHANGELOG.md  Cargo.toml  MIGRATION_GUIDE.md  README.md
twilight-gateway-queue/: CHANGELOG.md  Cargo.toml  README.md
twilight-gateway-queue/src/: day_limiter.rs  in_memory.rs  large_bot_queue.rs  lib.rs
twilight-gateway-queue/tests/: in_memory.rs
twilight-gateway/benches/: ratelimiter.rs
twilight-gateway/src/: channel.rs  command.rs  compression.rs  config.rs  connection.rs  error.rs  event.rs  future.rs  inflater.rs  json.rs  latency.rs  lib.rs  message.rs  queue.rs  ratelimiter.rs  session.rs  shard.rs  stream.rs  tls.rs
twilight-gateway/tests/: test_shard_command_ratelimit.rs  test_shard_state_events.rs
twilight-http/: CHANGELOG.md  Cargo.toml  README.md
twilight-http-ratelimiting/: CHANGELOG.md  Cargo.toml  README.md
twilight-http-ratelimiting/benches/: headers.rs
twilight-http-ratelimiting/src/: actor.rs  endpoint.rs  headers.rs  lib.rs  request.rs  ticket.rs
twilight-http-ratelimiting/tests/: bucket.rs  global.rs  test.rs
twilight-http/src/: error.rs  json.rs  lib.rs  query_array.rs  query_formatter.rs  query_str_formatter.rs  query_str_writer.rs  routing.rs
twilight-lavalink/: CHANGELOG.md  Cargo.toml  README.md
twilight-lavalink/src/: client.rs  http.rs  lib.rs  model.rs  node.rs  player.rs
twilight-mention/: CHANGELOG.md  Cargo.toml  README.md
twilight-mention/benches/: fmt.rs
twilight-mention/src/: fmt.rs  lib.rs  timestamp.rs
twilight-model/: CHANGELOG.md  Cargo.toml  README.md
twilight-model/benches/: deserialization.rs  image_hash.rs
twilight-model/src/: lib.rs  test.rs  visitor.rs
twilight-standby/: CHANGELOG.md  Cargo.toml  README.md
twilight-standby/src/: event.rs  future.rs  lib.rs
twilight-util/: CHANGELOG.md  Cargo.toml  README.md
twilight-util/src/: fmt.rs  format.rs  lib.rs  signature_validation.rs  snowflake.rs
twilight-validate/: CHANGELOG.md  Cargo.toml  README.md
twilight-validate/src/: channel.rs  command.rs  component.rs  embed.rs  lib.rs  message.rs  request.rs  soundboard.rs
twilight/src/: lib.rs
util/: CHANGELOG.md  Cargo.toml  README.md
util/src/: lib.rs  snowflake.rs
validate/: CHANGELOG.md  Cargo.toml  README.md
validate/src/: channel.rs  command.rs  component.rs  embed.rs  lib.rs  marker.rs  message.rs  misc.rs  request.rs  sticker.rs  validate.rs
(+3494 files in other folders)
