[workspace]
members = [
    "book/tests",
    "examples",
    "twilight",
    "twilight-cache-inmemory",
    "twilight-gateway",
    "twilight-gateway-queue",
    "twilight-http",
    "twilight-http-ratelimiting",
    "twilight-lavalink",
    "twilight-mention",
    "twilight-model",
    "twilight-standby",
    "twilight-util",
    "twilight-validate",
]
resolver = "2"

[workspace.package]
authors = ["Twilight Contributors"]
edition = "2021"
include = ["src/**/*.rs", "README.md"]
license = "ISC"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.64"

# awaiting merge of https://github.com/rkyv/rkyv/pull/358
[patch.crates-io]
rkyv = { git = "https://github.com/MaxOhn/rkyv", branch = "disambiguate-macro" }