[package]
authors = ["Twilight Contributors"]
documentation = "https://docs.rs/twilight-command-parser"
edition = "2018"
homepage = "https://github.com/twilight-rs/twilight"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-command-parser"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.1.0"

[dependencies]
unicase = { default-features = false, version = "2" }
