[package]
authors = ["Twilight Contributors"]
categories = []
description = "Message command parser for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-command-parser"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_5_command_parser.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-command-parser"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.4.0"

[dependencies]
unicase = { default-features = false, version = "2" }

[dev-dependencies]
criterion = "0.3"
patricia_tree = "0.3"
static_assertions = { default-features = false, version = "1" }

[[bench]]
name = "prefix"
harness = false
path = "benches/prefix.rs"

[[bench]]
name = "commands"
harness = false
path = "benches/commands.rs"
