[package]
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>"]
documentation = "https://docs.rs/dawn"
edition = "2018"
homepage = "https://github.com/dawn-rs/dawn"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "dawn"]
license = "ISC"
name = "dawn"
publish = false
repository = "https://github.com/dawn-rs/dawn"
readme = "../README.md"
version = "0.1.0"

[dependencies]
dawn-command-parser = { optional = true, path = "../command-parser" }
dawn-http = { optional = true, path = "../http" }
dawn-model = { optional = true, path = "../model" }

[features]
default = ["command-parser", "http", "model"]

command-parser = ["dawn-command-parser"]
http = ["dawn-http"]
model = ["dawn-model"]
