[package]
authors = ["Twilight Contributors"]
documentation = "https://docs.rs/twilight-embed-builders"
edition = "2018"
homepage = "https://github.com/twilight-rs/twilight"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-embed-builder"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.1.0"

[dependencies]
twilight-model = { path = "../model", default-features = false }
