[package]
authors = ["Twilight Contributors"]
categories = []
description = "Create validated message embeds for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-embed-builder"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_1_embed_builder.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-embed-builder"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.2.0"

[dependencies]
twilight-model = { path = "../model", default-features = false }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
