[package]
authors.workspace = true
edition.workspace = true
name = "examples"
publish = false
version = "0.0.0"

[dev-dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
ed25519-dalek = "1"
futures-util = { default-features = false, version = "0.3" }
hex = "0.4"
hyper = { features = ["client", "server", "http2", "runtime"], version = "0.14" }
log = { default-features = false, version = "0.4" }
metrics-runtime = { default-features = false, features = ["metrics-exporter-log", "metrics-observer-json"], version = "0.13" }
once_cell = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tracing = "0.1"
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }
twilight-gateway = { path = "../twilight-gateway" }
twilight-http = { path = "../twilight-http" }
twilight-lavalink = { path = "../twilight-lavalink" }
twilight-model = { path = "../twilight-model" }
twilight-standby = { path = "../twilight-standby" }

[[example]]
name = "gateway-intents"
path = "gateway-intents.rs"

[[example]]
name = "gateway-metrics"
path = "gateway-metrics.rs"

[[example]]
name = "gateway-reshard"
path = "gateway-reshard.rs"

[[example]]
name = "gateway-request-members"
path = "gateway-request-members.rs"

[[example]]
name = "gateway-shard"
path = "gateway-shard.rs"

[[example]]
name = "http-allowed-mentions"
path = "http-allowed-mentions.rs"

[[example]]
name = "http-get-message"
path = "http-get-message.rs"

[[example]]
name = "http-proxy"
path = "http-proxy.rs"

[[example]]
name = "lavalink-basic-bot"
path = "lavalink-basic-bot.rs"

[[example]]
name = "model-webhook-slash"
path = "model-webhook-slash.rs"
