[package]
authors = ["Twilight Contributors"]
categories = []
description = "Discord Gateway connection queue implementation for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-gateway-queue"
edition = "2021"
homepage = "https://twilight.rs/"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-gateway-queue"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.9.0"

[dependencies]
tokio = { default-features = false, features = ["rt", "sync", "time"], version = "1.0" }
twilight-http = { default-features = false, path = "../http" }

# Optional dependencies.
tracing = { default-features = false, features = ["std", "attributes"], optional = true, version = "0.1" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }

[features]
default = ["rustls-native-roots", "tracing"]
native = ["twilight-http/native"]
rustls-native-roots = ["twilight-http/rustls-native-roots"]
rustls-webpki-roots = ["twilight-http/rustls-webpki-roots"]
