[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]
description = "Discord Gateway implementation for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-gateway"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_3_gateway.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-gateway"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.6.0"

[dependencies]
tokio-tungstenite = "0.14"
bitflags = "1"
twilight-gateway-queue = { path = "queue" }
twilight-http = { default-features = false, path = "../http" }
twilight-model = { path = "../model" }
futures-util = { default-features = false, features = ["std"], version = "0.3" }
once_cell = "1"
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tokio = { features = ["net", "rt", "sync", "time"], version = "1.0" }
url = "2"

# Optional
# The default backend for flate2; miniz-oxide, works differently
# from the C-backed backend zlib, When you give it the sync argument
# it does not seem to update the total_in of the function to have an offset
# https://github.com/alexcrichton/flate2-rs/issues/217
flate2 = { default-features = false, optional = true, version = "1.0" }
metrics = { optional = true, version = "0.14" }
simd-json = { optional = true, version = "0.4" }
tracing = { optional = true, version = "0.1" }

[dev-dependencies]
futures = { default-features = false, version = "0.3" }
static_assertions = "1"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.0" }

[features]
default = ["compression", "rustls", "tracing", "flate2/zlib"]
compression = ["flate2"]
native = ["twilight-http/native", "twilight-gateway-queue/native", "tokio-tungstenite/native-tls"]
rustls = ["rustls-native-roots"]
rustls-native-roots = ["twilight-http/rustls-native-roots", "twilight-gateway-queue/rustls-native-roots", "tokio-tungstenite/rustls-tls"]
rustls-webpki-roots = ["twilight-http/rustls-webpki-roots", "twilight-gateway-queue/rustls-webpki-roots", "tokio-tungstenite/rustls-tls"]
zlib-simd = ["compression", "flate2/zlib-ng-compat"]
# if the `zlib` feature is enabled anywhere in the dependency tree it will
# always use stock zlib instead of zlib-ng.
# https://github.com/rust-lang/libz-sys/blob/main/README.md#zlib-ng
zlib-stock = ["compression", "flate2/zlib"]
