[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]
description = "Discord Gateway implementation for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-gateway"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_3_gateway.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-gateway"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.10.1"

[dependencies]
bitflags = { default-features = false, version = "1" }
futures-util = { default-features = false, features = ["std"], version = "0.3" }
serde = { default-features = false, features = ["derive"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
tokio = { default-features = false, features = ["net", "rt", "sync", "time"], version = "1.5" }
tokio-tungstenite = { default-features = false, features = ["connect"], version = "0.17" }
twilight-gateway-queue = { default-features = false, path = "../gateway-queue" }
twilight-http = { default-features = false, path = "../http" }
twilight-model = { default-features = false, path = "../model" }
url = { default-features = false, version = "2" }
leaky-bucket-lite = { default-features = false, features = ["tokio"], version = "0.5.1" }

# Optional
# The default backend for flate2; miniz-oxide, works differently
# from the C-backed backend zlib, When you give it the sync argument
# it does not seem to update the total_in of the function to have an offset
# https://github.com/alexcrichton/flate2-rs/issues/217
flate2 = { default-features = false, optional = true, version = "1.0" }
metrics = { default-features = false, optional = true, version = "0.18" }
dep-simd-json = { default-features = false, features = ["serde_impl", "swar-number-parsing"], optional = true, package = "simd-json", version = "0.4" }
tracing = { default-features = false, features = ["std", "attributes"], optional = true, version = "0.1" }

# `value-trait` updated its MSRV in a minor release, so use previous versions.
value-trait = { default-features = false, optional = true, version = ">=0.2, <0.2.11" }

# TLS libraries
# They are needed to track what is used in tokio-tungstenite
native-tls = { default-features = false, optional = true, version = "0.2.8" }
rustls-tls = { default-features = false, optional = true, package = "rustls", version = "0.20" }
rustls-native-certs = { default-features = false, optional = true, version = "0.6" }
webpki-roots = { default-features = false, optional = true, version = "0.22" }

[dev-dependencies]
futures = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.12" }

[features]
default = ["rustls-native-roots", "tracing", "zlib-stock"]
native = ["native-tls", "twilight-http/native", "twilight-gateway-queue/native", "tokio-tungstenite/native-tls"]
rustls-native-roots = ["rustls-tls", "rustls-native-certs", "twilight-http/rustls-native-roots", "twilight-gateway-queue/rustls-native-roots", "tokio-tungstenite/rustls-tls-native-roots"]
rustls-webpki-roots = ["rustls-tls", "webpki-roots", "twilight-http/rustls-webpki-roots", "twilight-gateway-queue/rustls-webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
simd-json = ["dep-simd-json", "value-trait"]
zlib-simd = ["flate2/zlib-ng-compat"]
# if the `zlib` feature is enabled anywhere in the dependency tree it will
# always use stock zlib instead of zlib-ng.
# https://github.com/rust-lang/libz-sys/blob/main/README.md#zlib-ng
zlib-stock = ["flate2/zlib"]
