[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous"]
description = "Discord REST API ratelimiter implementations for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-http-ratelimiting"
edition = "2021"
homepage = "https://twilight.rs/"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-http-ratelimiting"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.10.1"

[dependencies]
futures-util = { version = "0.3", default-features = false }
http = { version = "0.2", default-features = false }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
static_assertions = { default-features = false, version = "1.1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[[bench]]
name = "headers"
harness = false
path = "benches/headers.rs"
