[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
description = "Discord REST API client for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-http"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_2_http.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-http"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.6.1"

[dependencies]
rand = "0.8"
hyper = { features = ["client", "http1", "http2"], version = "0.14" }
hyper-rustls = { default-features = false, optional = true, version = "0.22" }
hyper-tls = { optional = true, version = "0.5" }
percent-encoding = "2"
tokio = { features = ["sync", "time"], version = "1.0" }
twilight-model = { path = "../model" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"

# optional
simd-json = { optional = true, version = "0.4" }
tracing = { optional = true, version = "0.1" }

[features]
default = ["rustls"]
native = ["hyper-tls"]
rustls = ["rustls-native-roots"]
rustls-native-roots = ["hyper-rustls/native-tokio"]
rustls-webpki-roots = ["hyper-rustls/webpki-tokio"]

[dev-dependencies]
criterion = "0.3"
serde_test = "1"
static_assertions = "1"
twilight-embed-builder = { path = "../embed-builder" }
tokio = { features = ["macros", "rt-multi-thread"], version = "1.0" }

[[bench]]
name = "application_command_permissions"
harness = false
path = "benches/application_command_permissions.rs"
