[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
description = "Discord REST API client for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-http"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_2_http.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "twilight"]
license = "ISC"
name = "twilight-http"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
rust-version = "1.57"
version = "0.10.0"

[dependencies]
hyper = { default-features = false, features = ["client", "http1", "http2", "runtime"], version = "0.14" }
hyper-rustls = { default-features = false, optional = true, features = ["http1", "http2"], version = "0.23" }
hyper-tls = { default-features = false, optional = true, version = "0.5" }
hyper-trust-dns = { default-features = false, optional = true, version = "0.3.1" }
percent-encoding = { default-features = false, version = "2" }
rand = { default-features = false, features = ["std_rng", "std"], version = "0.8" }
serde = { default-features = false, features = ["derive"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
tokio = { default-features = false, features = ["sync", "time"], version = "1.0" }
twilight-http-ratelimiting = { default-features = false, path = "../http-ratelimiting" }
twilight-model = { default-features = false, path = "../model" }
twilight-validate = { default-features = false, path = "../validate" }

# Optional dependencies.
brotli = { default-features = false, features = ["std"], optional = true, version = "3.0.0" }
dep-simd-json = { default-features = false, features = ["serde_impl", "swar-number-parsing"], optional = true, package = "simd-json", version = "0.4" }
tracing = { default-features = false, features = ["std", "attributes"], optional = true, version = "0.1" }

# `value-trait` updated its MSRV in a minor release, so use previous versions.
value-trait = { default-features = false, features = ["128bit"], optional = true, version = "<=0.2.10" }

[features]
default = ["decompression", "rustls-native-roots", "tracing"]
decompression = ["brotli"]
native = ["hyper-tls"]
rustls-native-roots = ["hyper-rustls/native-tokio"]
rustls-webpki-roots = ["hyper-rustls/webpki-tokio"]
simd-json = ["dep-simd-json", "value-trait"]
trust-dns = ["hyper-trust-dns"]

[dev-dependencies]
criterion = { default-features = false, version = "0.3" }
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1.1.0" }
twilight-util = { default-features = false, features = ["builder"], path = "../util" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }

[[bench]]
name = "application_command_permissions"
harness = false
path = "benches/application_command_permissions.rs"
