[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client", "web-programming::websocket"]
description = "Lavalink client for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-lavalink"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_3_lavalink.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "lavalink", "twilight"]
license = "ISC"
name = "twilight-lavalink"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.2.2"

[dependencies]
async-tungstenite = { default-features = false, features = ["tokio-runtime"], version = "0.11" }
dashmap = { default-features = false, version = "4.0" }
futures-channel = { default-features = false, features = ["std"], version = "0.3" }
futures-util = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3" }
http = { default-features = false, optional = true, version = "0.2" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
percent-encoding = { default-features = false, optional = true, version = "2" }
serde = { default-features = false, features = ["derive", "std"], version = "1" }
serde_json = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["net", "rt", "time"], version = "1.0" }
twilight-model = { default-features = false, path = "../model" }

[dev-dependencies]
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { path = "../gateway" }
twilight-http = { path = "../http" }

[features]
default = ["http-support", "rustls"]
http-support = ["http", "percent-encoding"]
native = ["async-tungstenite/tokio-native-tls"]
rustls = ["async-tungstenite/tokio-rustls"]
