[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client", "web-programming::websocket"]
description = "Lavalink client for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-lavalink"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_3_lavalink.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "lavalink", "twilight"]
license = "ISC"
name = "twilight-lavalink"
publish = false
readme = "README.md"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.6.0"

[dependencies]
tokio-tungstenite = "0.14"
dashmap = "4.0"
futures-util = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3" }
http = { optional = true, version = "0.2" }
tracing = "0.1"
percent-encoding = { optional = true, version = "2" }
serde = { features = ["derive"], version = "1" }
serde_json = "1"
tokio = { features = ["macros", "net", "rt", "sync", "time"], version = "1.0" }
twilight-model = { path = "../model" }

[dev-dependencies]
serde_test = "1"
static_assertions = "1"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { path = "../gateway" }
twilight-http = { path = "../http" }

[features]
default = ["http-support", "rustls"]
http-support = ["http", "percent-encoding"]
native = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls-tls"]
