[package]
authors = ["Twilight Contributors"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client", "web-programming::websocket"]
description = "Lavalink client for the Twilight ecosystem."
documentation = "https://docs.rs/twilight-lavalink"
edition = "2021"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_3_lavalink.html"
include = ["src/**/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "lavalink", "twilight"]
license = "ISC"
name = "twilight-lavalink"
publish = false
readme = "README.md"
rust-version = "1.57"
repository = "https://github.com/twilight-rs/twilight.git"
version = "0.9.1"

[dependencies]
dashmap = { default-features = false, version = "5.1" }
futures-util = { default-features = false, features = ["bilock", "std", "unstable"], version = "0.3" }
http = { default-features = false, version = "0.2" }
serde = { default-features = false, features = ["derive", "std"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
tokio = { default-features = false, features = ["macros", "net", "rt", "sync", "time"], version = "1.0" }
tokio-tungstenite = { default-features = false, features = ["connect"], version = "0.16" }
twilight-model = { default-features = false, path = "../model" }

# Optional dependencies.
percent-encoding = { default-features = false, optional = true, version = "2" }
tracing = { default-features = false, features = ["std", "attributes"], optional = true, version = "0.1" }

[dev-dependencies]
serde_test = { default-features = false, version = "1" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
twilight-gateway = { default-features = false, features = ["rustls-native-roots"], path = "../gateway" }
twilight-http = { default-features = false, features = ["rustls-native-roots"], path = "../http" }

[features]
default = ["http-support", "rustls-native-roots", "tracing"]
http-support = ["percent-encoding"]
native = ["tokio-tungstenite/native-tls"]
rustls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-webpki-roots = ["tokio-tungstenite/rustls-tls-webpki-roots"]
