[package]
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>"]
documentation = "https://docs.rs/lmao"
edition = "2018"
homepage = "https://github.com/zeyla/lmao"
include = ["src/*.rs", "Cargo.toml"]
keywords = ["discord", "discord-api", "lmao"]
license = "ISC"
name = "lmao"
publish = false
repository = "https://github.com/zeyla/lmao"
readme = "../README.md"
version = "0.1.0"

[dependencies]
lmao-cache = { optional = true, path = "../cache/base" }
lmao-command-parser = { optional = true, path = "../command-parser" }
lmao-gateway = { optional = true, path = "../gateway" }
lmao-http = { optional = true, path = "../http" }
lmao-model = { optional = true, path = "../model" }
lmao-voice = { optional = true, path = "../voice" }

[features]
default = ["cache", "command-parser", "gateway", "http", "model", "voice"]

cache = ["lmao-cache"]
command-parser = ["lmao-command-parser"]
gateway = ["lmao-gateway"]
http = ["lmao-http"]
model = ["lmao-model"]
voice = ["lmao-voice"]
