[package]
authors = ["Twilight Contributors"]
categories = []
description = "Utilities for working with mentions in the Twilight ecosystem."
documentation = "https://docs.rs/twilight-mention"
edition = "2018"
homepage = "https://twilight.rs/chapter_1_crates/section_8_first_party/section_2_mention.html"
include = ["src/**/*.rs", "Cargo.toml", "README.md"]
keywords = ["twilight"]
license = "ISC"
name = "twilight-mention"
publish = false
repository = "https://github.com/twilight-rs/twilight.git"
readme = "README.md"
version = "0.4.0"

[dependencies]
twilight-model = { default-features = false, path = "../model" }

[dev-dependencies]
static_assertions = { default-features = false, version = "1" }
